force-app/main/default/objects/Quotation_Item__c/Quotation_Item__c.object-meta.xml
<CustomObject>
    <label>Quotation Item</label>
    <nameField>
        <label>Quotation Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>