force-app/main/default/objects/Quotation_Item__c/fields/Add_to_Buying_Origin__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Buying_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Buying Origin</label>
    <type>Checkbox</type>
</CustomField>