force-app/main/default/objects/Quotation_Item__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Quotation Items</relationshipLabel>
    <relationshipName>Quotation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>