force-app/main/default/objects/Quotation_Item__c/fields/Airport_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Airport_of_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport of Destination</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Quotation Items (Airport of Destination)</relationshipLabel>
    <relationshipName>Quotation_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>