force-app/main/default/objects/Quotation_Item__c/fields/Alternate_depot_release_charges__c.field-meta.xml
<CustomField>
    <fullName>Alternate_depot_release_charges__c</fullName>
    <label>Alternate depot release charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>