force-app/main/default/objects/Quotation_Item__c/fields/autonumber__c.field-meta.xml
<CustomField>
    <fullName>autonumber__c</fullName>
    <displayFormat>QI-{00000}</displayFormat>
    <label>autonumber</label>
    <type>AutoNumber</type>
</CustomField>