force-app/main/default/objects/Quotation_Item__c/fields/BL_Fees__c.field-meta.xml
<CustomField>
    <fullName>BL_Fees__c</fullName>
    <label>BL Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>