force-app/main/default/objects/Quotation_Item__c/fields/Buying_Charges_Include__c.field-meta.xml
<CustomField>
    <fullName>Buying_Charges_Include__c</fullName>
    <label>Buying Charges Included</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>