force-app/main/default/objects/Quotation_Item__c/fields/Buying_Input__c.field-meta.xml
<CustomField>
    <fullName>Buying_Input__c</fullName>
    <label>Buying Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>