force-app/main/default/objects/Quotation_Item__c/fields/Carrier_container_repositioning_charges__c.field-meta.xml
<CustomField>
    <fullName>Carrier_container_repositioning_charges__c</fullName>
    <label>Carrier container repositioning charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>