force-app/main/default/objects/Quotation_Item__c/fields/Chargeable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight__c</fullName>
    <label>Chargeable Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>