force-app/main/default/objects/Quotation_Item__c/fields/Cleaning_charges__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_charges__c</fullName>
    <label>Cleaning charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>