force-app/main/default/objects/Quotation_Item__c/fields/Container_Lashing_Charges__c.field-meta.xml
<CustomField>
    <fullName>Container_Lashing_Charges__c</fullName>
    <label>Container Lashing Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>