force-app/main/default/objects/Quotation_Item__c/fields/Container_stripping__c.field-meta.xml
<CustomField>
    <fullName>Container_stripping__c</fullName>
    <label>Container stripping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>