force-app/main/default/objects/Quotation_Item__c/fields/Destination_Customs_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Destination_Customs_Clearance__c</fullName>
    <label>Destination Customs Clearance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>