force-app/main/default/objects/Quotation_Item__c/fields/DTHC__c.field-meta.xml
<CustomField>
    <fullName>DTHC__c</fullName>
    <label>DTHC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>