force-app/main/default/objects/Quotation_Item__c/fields/EIC__c.field-meta.xml
<CustomField>
    <fullName>EIC__c</fullName>
    <label>Equipment Imbalance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>