force-app/main/default/objects/Quotation_Item__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Type</label>
    <referenceTo>Equipment_Type__c</referenceTo>
    <relationshipLabel>Quotation Items</relationshipLabel>
    <relationshipName>Quotation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>