force-app/main/default/objects/Quotation_Item__c/fields/Ex_Works_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Ex_Works_Charge_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ex Works Charge Name</label>
    <referenceTo>Loading_Charge__c</referenceTo>
    <relationshipLabel>Quotation Items</relationshipLabel>
    <relationshipName>Quotation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>