force-app/main/default/objects/Quotation_Item__c/fields/Fasah_fee__c.field-meta.xml
<CustomField>
    <fullName>Fasah_fee__c</fullName>
    <label>Fasah Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>