force-app/main/default/objects/Quotation_Item__c/fields/Free_time_certificate_charges__c.field-meta.xml
<CustomField>
    <fullName>Free_time_certificate_charges__c</fullName>
    <label>Additional Freetime Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>