force-app/main/default/objects/Quotation_Item__c/fields/Fumigation__c.field-meta.xml
<CustomField>
    <fullName>Fumigation__c</fullName>
    <label>Fumigation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>