force-app/main/default/objects/Quotation_Item__c/fields/Gate_pass_charges__c.field-meta.xml
<CustomField>
    <fullName>Gate_pass_charges__c</fullName>
    <label>Gate pass charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>