force-app/main/default/objects/Quotation_Item__c/fields/Included_PDF_Destination__c.field-meta.xml
<CustomField>
    <fullName>Included_PDF_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included PDF Destination</label>
    <type>Checkbox</type>
</CustomField>