force-app/main/default/objects/Quotation_Item__c/fields/Included_PDF_Origin__c.field-meta.xml
<CustomField>
    <fullName>Included_PDF_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included PDF Origin</label>
    <type>Checkbox</type>
</CustomField>