force-app/main/default/objects/Quotation_Item__c/fields/INCO_Term__c.field-meta.xml
<CustomField>
    <fullName>INCO_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INCO Term</label>
    <referenceTo>INCO_Term__c</referenceTo>
    <relationshipLabel>Quotation Items</relationshipLabel>
    <relationshipName>Quotation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>