force-app/main/default/objects/Quotation_Item__c/fields/Inland_Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Inland_Fuel_Surcharge__c</fullName>
    <label>Inland Fuel Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>