force-app/main/default/objects/Quotation_Item__c/fields/Inland_haulage__c.field-meta.xml
<CustomField>
    <fullName>Inland_haulage__c</fullName>
    <label>Inland haulage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>