force-app/main/default/objects/Quotation_Item__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <label>Inspection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>