force-app/main/default/objects/Quotation_Item__c/fields/Insurance_charges__c.field-meta.xml
<CustomField>
    <fullName>Insurance_charges__c</fullName>
    <label>Insurance charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>