force-app/main/default/objects/Quotation_Item__c/fields/ISPS__c.field-meta.xml
<CustomField>
    <fullName>ISPS__c</fullName>
    <label>ISPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>