force-app/main/default/objects/Quotation_Item__c/fields/Lift_on_Lift_off__c.field-meta.xml
<CustomField>
    <fullName>Lift_on_Lift_off__c</fullName>
    <label>Lift on-Lift off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>