force-app/main/default/objects/Quotation_Item__c/fields/Loading_Charges__c.field-meta.xml
<CustomField>
    <fullName>Loading_Charges__c</fullName>
    <label>Loading Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>