force-app/main/default/objects/Quotation_Item__c/fields/Ministry_clearnce_charge_for_OOG_cargo__c.field-meta.xml
<CustomField>
    <fullName>Ministry_clearnce_charge_for_OOG_cargo__c</fullName>
    <label>Ministry clearnce charge for OOG cargo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>