force-app/main/default/objects/Quotation_Item__c/fields/Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous__c</fullName>
    <label>Miscellaneous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>