force-app/main/default/objects/Quotation_Item__c/fields/MOT_fine_charges__c.field-meta.xml
<CustomField>
    <fullName>MOT_fine_charges__c</fullName>
    <label>MOT fine charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>