force-app/main/default/objects/Quotation_Item__c/fields/Operational_Charges_Buying__c.field-meta.xml
<CustomField>
    <fullName>Operational_Charges_Buying__c</fullName>
    <label>Operational Charges Buying</label>
    <type>TextArea</type>
</CustomField>