force-app/main/default/objects/Quotation_Item__c/fields/Operational_Charges_Selling__c.field-meta.xml
<CustomField>
    <fullName>Operational_Charges_Selling__c</fullName>
    <label>Operational Charges Selling</label>
    <type>TextArea</type>
</CustomField>