force-app/main/default/objects/Quotation_Item__c/fields/OTHC__c.field-meta.xml
<CustomField>
    <fullName>OTHC__c</fullName>
    <label>OTHC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>