force-app/main/default/objects/Quotation_Item__c/fields/Overweight_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Overweight_surcharge__c</fullName>
    <label>Overweight/Overheight surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>