force-app/main/default/objects/Quotation_Item__c/fields/Pickup_Charges__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Charges__c</fullName>
    <label>Pickup Charges(Transportation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>