force-app/main/default/objects/Quotation_Item__c/fields/Pickup_Place__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Place__c</fullName>
    <label>Pickup Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>