force-app/main/default/objects/Quotation_Item__c/fields/Port_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Discharge</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Quotation Items (Port of Discharge)</relationshipLabel>
    <relationshipName>Quotation_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>