force-app/main/default/objects/Quotation_Item__c/fields/Port_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Quotation Items</relationshipLabel>
    <relationshipName>Quotation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>