force-app/main/default/objects/Quotation_Item__c/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <formula>(( Total__c -  Buying_Rate__c ) /  Buying_Rate__c )</formula>
    <label>Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>