force-app/main/default/objects/Quotation_Item__c/fields/Reefer_cntr_plug_in_charges__c.field-meta.xml
<CustomField>
    <fullName>Reefer_cntr_plug_in_charges__c</fullName>
    <label>Reefer Plugin Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>