force-app/main/default/objects/Quotation_Item__c/fields/Reefer_PTI_charges__c.field-meta.xml
<CustomField>
    <fullName>Reefer_PTI_charges__c</fullName>
    <label>Reefer PTI charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>