force-app/main/default/objects/Quotation_Item__c/fields/Reefer_steam_wash__c.field-meta.xml
<CustomField>
    <fullName>Reefer_steam_wash__c</fullName>
    <label>Reefer steam wash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>