force-app/main/default/objects/Quotation_Item__c/fields/Remarks_Destination_Charges__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Destination_Charges__c</fullName>
    <label>Remarks Destination Charges</label>
    <type>TextArea</type>
</CustomField>