force-app/main/default/objects/Quotation_Item__c/fields/RMS__c.field-meta.xml
<CustomField>
    <fullName>RMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMS</label>
    <referenceTo>RMS__c</referenceTo>
    <relationshipLabel>Quotation Items</relationshipLabel>
    <relationshipName>Quotation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>