force-app/main/default/objects/Quotation_Item__c/fields/Sea_Freight__c.field-meta.xml
<CustomField>
    <fullName>Sea_Freight__c</fullName>
    <label>Sea Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>