force-app/main/default/objects/Quotation_Item__c/fields/Seal_Charges__c.field-meta.xml
<CustomField>
    <fullName>Seal_Charges__c</fullName>
    <label>Seal Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>