force-app/main/default/objects/Quotation_Item__c/fields/Selling_Charges_Include__c.field-meta.xml
<CustomField>
    <fullName>Selling_Charges_Include__c</fullName>
    <label>Selling Charges Included</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>