force-app/main/default/objects/Quotation_Item__c/fields/Selling_Rate_Kg__c.field-meta.xml
<CustomField>
    <fullName>Selling_Rate_Kg__c</fullName>
    <label>Selling Rate/Kg</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>