force-app/main/default/objects/Quotation_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>TEXT(Route__r.Service_Type__c)</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>