force-app/main/default/objects/Quotation_Item__c/fields/Shipping_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Line__c</fullName>
    <formula>RMS__r.Shipping_Line__r.Name</formula>
    <label>Shipping Line</label>
    <type>Text</type>
</CustomField>