force-app/main/default/objects/Quotation_Item__c/fields/Shipping_Linee__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Linee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Line</label>
    <referenceTo>Shipping_Line__c</referenceTo>
    <relationshipLabel>Quotation Items</relationshipLabel>
    <relationshipName>Quotation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>