force-app/main/default/objects/Quotation_Item__c/fields/SweepingCleaning__c.field-meta.xml
<CustomField>
    <fullName>SweepingCleaning__c</fullName>
    <label>Sweeping/Cleaning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>