force-app/main/default/objects/Quotation_Item__c/fields/Tab_View__c.field-meta.xml
<CustomField>
    <fullName>Tab_View__c</fullName>
    <label>Tab View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>