force-app/main/default/objects/Quotation_Item__c/fields/Tabadul__c.field-meta.xml
<CustomField>
    <fullName>Tabadul__c</fullName>
    <label>Tabadul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>