force-app/main/default/objects/Quotation_Item__c/fields/Tank_Rental_Charges__c.field-meta.xml
<CustomField>
    <fullName>Tank_Rental_Charges__c</fullName>
    <label>Tank Rental Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>