force-app/main/default/objects/Quotation_Item__c/fields/Tarpauline_charge__c.field-meta.xml
<CustomField>
    <fullName>Tarpauline_charge__c</fullName>
    <label>Tarpauline charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>