force-app/main/default/objects/Quotation_Item__c/fields/Teus__c.field-meta.xml
<CustomField>
    <fullName>Teus__c</fullName>
    <formula>Quantity__c *  Equipment_Type__r.Teus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>