force-app/main/default/objects/Quotation_Item__c/fields/Total_Additional__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional__c</fullName>
    <label>Total Additional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>