force-app/main/default/objects/Quotation_Item__c/fields/Total_CBM__c.field-meta.xml
<CustomField>
    <fullName>Total_CBM__c</fullName>
    <label>Total CBM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>