force-app/main/default/objects/Quotation_Item__c/fields/Total_Dest__c.field-meta.xml
<CustomField>
    <fullName>Total_Dest__c</fullName>
    <label>Total Destination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>