force-app/main/default/objects/Quotation_Item__c/fields/Total_Ex_Works_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Ex_Works_Charges__c</fullName>
    <label>Total Ex-Works Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>